# dailycoding2025

./: .gitignore  a
Chess/: CMakeLists.txt  main.cpp
Chess/interfaces/: bishop.cpp  board.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
Chess/interfaces/headers/: bishop.h  board.h  game.h  king.h  knight.h  pawn.h  piece.h  player.h  queen.h  rook.h
Chess/interfaces/source/: bishop.cpp  board.cpp  game.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  player.cpp  queen.cpp  rook.cpp
Lets Lie to Teams/: main.cpp
adventofcode2024/day2/: main.c
day1/: main.c
leetcode/242. Valid Anagram/: main.c
